# flowcus

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Justfile  README.md
.claude/: settings.json  settings.local.json
.claude/agents/: claude-config-optimizer.md  frontend-engineer.md  ipfix-ingestion-engine.md  query-engine-architect.md  storage-integrity-engineer.md  test-engineer.md
.github/workflows/: release.yml
crates/flowcus-app/: Cargo.toml
crates/flowcus-app/src/: main.rs
crates/flowcus-app/tests/: server_test.rs
crates/flowcus-core/src/: config.rs  observability.rs
crates/flowcus-ipfix/src/: decoder.rs  lib.rs  listener.rs  session.rs  unprocessed.rs
crates/flowcus-ipfix/tests/: unprocessed_tests.rs
crates/flowcus-query/src/: lib.rs  structured.rs
crates/flowcus-server/: Cargo.toml
crates/flowcus-server/src/: api.rs  lib.rs  query.rs  state.rs
crates/flowcus-storage/: Cargo.toml
crates/flowcus-storage/src/: cache.rs  decode.rs  executor.rs  granule.rs  lib.rs  merge.rs  migrate.rs  part.rs  schema.rs  table.rs  uuid7.rs  writer.rs
frontend/: tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: AboutDialog.tsx  App.tsx  ColumnConfig.tsx  ExplainGantt.tsx  FlowSidebar.tsx  HealthPanel.tsx  QueryEditor.tsx  ResultsTable.tsx  SearchBar.tsx  TimeHistogram.tsx  TimeRangePicker.tsx  api.ts  formatCache.ts  formatters.ts  index.css  useCompletions.ts
tests/e2e/: docker-compose.yml  flowcus-test.toml  histogram_validator.py  ipfix_generator.py  query_validator.py  run.py  storage_monitor.py
(+5 files in other folders)
