[package]
name = "flowcus-app"
description = "Flowcus application binary"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "flowcus"
path = "src/main.rs"

[features]
dev-mode = []

[lints]
workspace = true

[dependencies]
flowcus-core = { workspace = true }

flowcus-ipfix = { workspace = true }
flowcus-storage = { workspace = true }
flowcus-server = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

[package.metadata.deb]
maintainer = "Marek Wajdzik <marek@jest.pro>"
copyright = "2026, Marek Wajdzik"
depends = "$auto"
section = "net"
priority = "optional"
assets = [
    ["target/release/flowcus", "usr/bin/", "755"],
    ["../../dist/flowcus.service", "lib/systemd/system/flowcus.service", "644"],
]
maintainer-scripts = "../../dist/debian/"
systemd-units = { unit-name = "flowcus", enable = false, start = false }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
flowcus-ipfix = { workspace = true }
flowcus-storage = { workspace = true }
